docs(runtime): record native-access adoption decision